--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 li.textContent = task;
 
                 let deleteBtn = document.createElement("button");
-                deleteBtn.textContent = "X";
+                deleteBtn.textContent = "Eliminar";
                 deleteBtn.className = "delete";
                 deleteBtn.onclick = function () {
                     deleteTask(index);
